apps/gitea/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: gitea
  namespace: gitea

spec:

  replicas: 1

  selector:
    matchLabels:
      app: gitea

  template:

    metadata:
      labels:
        app: gitea

    spec:

      containers:

      - name: gitea

        image: docker.gitea.com/gitea:1.24.6-rootless

        ports:

        - containerPort: 3000

        - containerPort: 22

        volumeMounts:

        - name: data
          mountPath: /data

        - name: config
          mountPath: /etc/gitea/app.ini
          subPath: app.ini

      volumes:

      - name: data
        persistentVolumeClaim:
          claimName: gitea-data

      - name: config
        configMap:
          name: gitea-config
