apps/gitea/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: gitea
  namespace: gitea

spec:
  serviceName: gitea

  replicas: 1

  selector:
    matchLabels:
      app: gitea

  template:
    metadata:
      labels:
        app: gitea

    spec:

      securityContext:
        fsGroup: 1000

      containers:

      - name: gitea

        image: docker.gitea.com/gitea:1.24.6-rootless

        imagePullPolicy: IfNotPresent

        ports:

        - containerPort: 3000
          name: http

        - containerPort: 2222
          name: ssh

        resources:

          requests:
            cpu: 100m
            memory: 256Mi

          limits:
            cpu: 1000m
            memory: 1Gi

        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 20

        startupProbe:
          httpGet:
            path: /
            port: 3000
          periodSeconds: 5
          failureThreshold: 60

        volumeMounts:

        - name: data
          mountPath: /var/lib/gitea

      volumes:

      - name: data
        persistentVolumeClaim:
          claimName: gitea-data
