apps/gitea/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: gitea
  namespace: gitea

spec:
  tls:
    - hosts:
        - uptime-kuma.home.arpa
      secretName: uptime-kuma-tls
  ingressClassName: nginx
  rules:
  - host: gitea.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea
            port:
              number: 3000
